--- a/job.yaml
+++ b/job.yaml
@@ -2,7 +2,7 @@
     name: spring_petclinic_jjb_<appndid>
     project-type: freestyle
     defaults: global
-    description: 'Build and  Deploy of petsclinc via JJB -Branch BuildOn-Dev CTS DevOps'
+    description: 'Build and  Deploy of petsclinc via JJB -Branch BuildOn-Dev CTS DevOps!!'
     block-downstream: true
     block-upstream: true
     concurrent: false
